Adicionar funcionlidade para trazer o combo ja com um valor selecionado

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,4 @@
     <app-principal-combobox></app-principal-combobox> 
     <app-principal-auto-complete></app-principal-auto-complete>
 -->
-<app-principal-table></app-principal-table>
+<app-principal-combobox></app-principal-combobox>
