--- a/src/app/principal/principal-combobox/principal-combobox.component.html
+++ b/src/app/principal/principal-combobox/principal-combobox.component.html
@@ -1,3 +1,3 @@
-<app-combo-box nomeCombo="Sexo" [conteudoCombo]="comboSexo" (itemSelecionadoEvent)="sexoSelecionado($event)"></app-combo-box>
-<app-combo-box nomeCombo="Status" [conteudoCombo]="comboStatus" (itemSelecionadoEvent)="statusSelecionado($event)"></app-combo-box>
-<app-combo-box nomeCombo="Status Pedido" [conteudoCombo]="comboPedido"(itemSelecionadoEvent)="statusPedidoSelecionado($event)"></app-combo-box>
+<app-combo-box nomeCombo="Sexo" [conteudoCombo]="comboSexo" [indexDesejado]="indexSexoDesejado" (itemSelecionadoEvent)="sexoSelecionado($event)"></app-combo-box>
+<app-combo-box nomeCombo="Status" [conteudoCombo]="comboStatus" [indexDesejado]="indexStatusDesejado" (itemSelecionadoEvent)="statusSelecionado($event)"></app-combo-box>
+<app-combo-box nomeCombo="Status Pedido" [conteudoCombo]="comboPedido" [indexDesejado]="indexStatusPedidoDesejado" (itemSelecionadoEvent)="statusPedidoSelecionado($event)"></app-combo-box> 
