--- a/src/app/shared/combo-box/combo-box.component.html
+++ b/src/app/shared/combo-box/combo-box.component.html
@@ -1,6 +1,6 @@
 <mat-form-field class="combo-box">
     <mat-label>{{ nomeCombo }}</mat-label>
-    <mat-select>
+    <mat-select [(value)]="valorDefault" >
         <mat-option *ngFor="let item of conteudoCombo" [value]="item" (click)="itemSelecionado(item)">{{ item.Descricao }}
         </mat-option>
     </mat-select>
