Form com validacao

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,1 @@
-<!-- 
-    <app-principal-combobox></app-principal-combobox> 
-    <app-principal-auto-complete></app-principal-auto-complete>
--->
-<app-principal-combobox></app-principal-combobox>
+<app-formulario></app-formulario>
