Criacao do evento excluir e icone na grid

--- a/src/app/formulario/formulario.component.css
+++ b/src/app/formulario/formulario.component.css
@@ -2,8 +2,14 @@
   min-width: 150px;
   max-width: 500px;
   width: 100%;
+  margin-left: 25rem;
 }
 
 .example-full-width {
+  width: 40%;
+  margin-left: 0.5rem;
+}
+
+table {
   width: 100%;
 }
