--- a/src/app/shared/grid/grid.component.html
+++ b/src/app/shared/grid/grid.component.html
@@ -5,13 +5,18 @@
 
             <ng-container [ngSwitch]="item.tipoColuna">
                 <ng-container *ngSwitchCase="'Texto'">
-                    <td mat-cell *matCellDef="let element">{{ element[item.nomeColuna] }}</td> 
+                    <td mat-cell *matCellDef="let element">{{ element[item.nomeColuna] }}</td>
                 </ng-container>
                 <ng-container *ngSwitchCase="'CPF'">
-                    <td mat-cell *matCellDef="let element">{{ element[item.nomeColuna] | mascaraCPF }}</td> 
+                    <td mat-cell *matCellDef="let element">{{ element[item.nomeColuna] | mascaraCPF }}</td>
                 </ng-container>
                 <ng-container *ngSwitchCase="'CNPJ'">
-                    <td mat-cell *matCellDef="let element">{{ element[item.nomeColuna] | mascaraCnpj }}</td> 
+                    <td mat-cell *matCellDef="let element">{{ element[item.nomeColuna] | mascaraCnpj }}</td>
+                </ng-container>
+                <ng-container *ngSwitchCase="'Excluir'">
+                    <td mat-cell *matCellDef="let element" class="excluir">
+                        <mat-icon class="icone-excluir" title="Excluir" (click)="removerRegistro(element)" >delete</mat-icon>
+                    </td>
                 </ng-container>
             </ng-container>
         </ng-container>
