--- a/src/app/shared/grid/grid.component.html
+++ b/src/app/shared/grid/grid.component.html
@@ -1,7 +1,7 @@
 <table mat-table [dataSource]="dadosTabela" class="mat-elevation-z8">
     <ng-container *ngFor="let item of tipoColunas">
         <ng-container [matColumnDef]="item.nomeColuna">
-            <th mat-header-cell *matHeaderCellDef> {{ item.tipoColuna }} </th>
+            <th mat-header-cell *matHeaderCellDef> {{ item.nomeColuna }} </th>
 
             <ng-container [ngSwitch]="item.tipoColuna">
                 <ng-container *ngSwitchCase="'Texto'">
@@ -15,7 +15,8 @@
                 </ng-container>
                 <ng-container *ngSwitchCase="'Excluir'">
                     <td mat-cell *matCellDef="let element" class="excluir">
-                        <mat-icon class="icone-excluir" title="Excluir" (click)="removerRegistro(element)" >delete</mat-icon>
+                        <mat-icon class="icone-excluir" title="Excluir" (click)="removerRegistro(element)">delete
+                        </mat-icon>
                     </td>
                 </ng-container>
             </ng-container>
