Adicionar ENUM e opcao de slide-toogle para a grid

--- a/src/app/principal/principal-table/principal-table.component.html
+++ b/src/app/principal/principal-table/principal-table.component.html
@@ -1,3 +1,3 @@
 <app-grid [dadosTabela]="dataSource" [definicaoNomeDasColunas]="nomeColunas" [tipoColunas]="tipoDeDadosTabela"
-    (itemSelecionado)="excluirRegistro($event)">
+    (itemSelecionado)="excluirRegistro($event)" (itemToggleSelecionado)="inativarRegistros($event)">
 </app-grid>
