--- a/src/app/shared/grid/grid.component.html
+++ b/src/app/shared/grid/grid.component.html
@@ -22,6 +22,11 @@
                         </mat-icon>
                     </td>
                 </ng-container>
+                <ng-container *ngSwitchCase="'SlideToggle'">
+                    <td mat-cell *matCellDef="let element">
+                        <mat-slide-toggle checked="{{ element[item.nomeColuna] }}" (change)="onChangeToggle(element)"  ></mat-slide-toggle>
+                    </td>
+                </ng-container>
             </ng-container>
         </ng-container>
     </ng-container>
