--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,12 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.mat-slide-toggle.mat-checked .mat-slide-toggle-bar{
+    background-color: #90EE90;
+}
+
+.mat-slide-toggle.mat-checked .mat-slide-toggle-thumb
+{
+    background-color: #008000;
+}
