--- a/src/app/formulario/formulario.component.css
+++ b/src/app/formulario/formulario.component.css
@@ -1,15 +1,19 @@
-.container {
-  min-width: 150px;
+.box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.box div {
   max-width: 500px;
-  width: 100%;
-  margin-left: 25rem;
+  height: 95vh;
+  background-color: rgb(215, 233, 245);
+  margin-top: 10px;
 }
 
-.example-full-width {
-  width: 40%;
-  margin-left: 0.5rem;
-}
-
-table {
-  width: 100%;
+.container {
+  display: flex;
+  justify-content: center;
+  max-width: 800px;
+  border: 1px solid black;
 }
