--- a/src/app/formulario/formulario.component.html
+++ b/src/app/formulario/formulario.component.html
@@ -1,54 +1,25 @@
-<form [formGroup]="formCadastro" class="container" (ngSubmit)="salvar()">
-    <mat-form-field class="example-full-width">
-        <mat-label>Nome</mat-label>
-        <input matInput formControlName="nome" required>
-    </mat-form-field>
-    <mat-form-field class="example-full-width">
-        <mat-label>E-mail</mat-label>
-        <input matInput formControlName="email" required>
-    </mat-form-field>
-    <!-- <div formGroupName="endereco"> -->
-    <mat-form-field class="example-full-width">
-        <mat-label>CEP</mat-label>
-        <input matInput formControlName="cep" required>
-    </mat-form-field>
-    <mat-form-field class="example-full-width">
-        <mat-label>Logradouro</mat-label>
-        <input matInput formControlName="logradouro" required>
-    </mat-form-field>
-    <!-- </div> -->
-    <button class="example-full-width" style="margin-bottom: 50px;">Salvar</button>
-</form>
-
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-    <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef> Nome </th>
-        <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-    </ng-container>
-    <ng-container matColumnDef="nome">
-        <th mat-header-cell *matHeaderCellDef> Email </th>
-        <td mat-cell *matCellDef="let element"> {{element.nome}} </td>
-    </ng-container>
-    <ng-container matColumnDef="CPF">
-        <th mat-header-cell *matHeaderCellDef> CEP </th>
-        <td mat-cell *matCellDef="let element"> {{element.CPF}} </td>
-    </ng-container>
-    <ng-container matColumnDef="CNPJ">
-        <th mat-header-cell *matHeaderCellDef> Logradouro </th>
-        <td mat-cell *matCellDef="let element"> {{element.CNPJ}} </td>
-    </ng-container>
-    <ng-container matColumnDef="novaColuna">
-        <th mat-header-cell *matHeaderCellDef> Logradouro </th>
-        <td mat-cell *matCellDef="let element"> {{element.novaColuna}} </td>
-    </ng-container>
-    <ng-container matColumnDef="icone">
-        <th mat-header-cell *matHeaderCellDef> Delete </th>
-        <td mat-cell *matCellDef="let element">
-            <button mat-icon-button color="primary">
-                <mat-icon>delete</mat-icon>
-            </button>
-        </td>
-    </ng-container>
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
+<div class="box">
+    <div class="mat-elevation-z4">
+        <form [formGroup]="formCadastro" (ngSubmit)="salvar()">
+            <mat-form-field class="example-full-width">
+                <mat-label>Nome</mat-label>
+                <input matInput formControlName="nome" required>
+            </mat-form-field>
+            <mat-form-field class="example-full-width">
+                <mat-label>E-mail</mat-label>
+                <input matInput formControlName="email" required>
+            </mat-form-field>
+            <!-- <div formGroupName="endereco"> -->
+            <mat-form-field class="example-full-width">
+                <mat-label>CEP</mat-label>
+                <input matInput formControlName="cep" required>
+            </mat-form-field>
+            <mat-form-field class="example-full-width">
+                <mat-label>Logradouro</mat-label>
+                <input matInput formControlName="logradouro" required>
+            </mat-form-field>
+            <!-- </div> -->
+            <button class="example-full-width" style="margin-bottom: 50px;">Salvar</button>
+        </form>
+    </div>
+    <div>
