--- a/src/app/shared/grid/grid.component.html
+++ b/src/app/shared/grid/grid.component.html
@@ -24,7 +24,8 @@
                 </ng-container>
                 <ng-container *ngSwitchCase="'SlideToggle'">
                     <td mat-cell *matCellDef="let element">
-                        <mat-slide-toggle checked="{{ element[item.nomeColuna] }}" (change)="onChangeToggle(element)"  ></mat-slide-toggle>
+                        <mat-slide-toggle checked="{{ element[item.nomeColuna] }}" (change)="onChangeToggle(element)">
+                        </mat-slide-toggle>
                     </td>
                 </ng-container>
             </ng-container>
