Adicionar componente de card e usando flexLayout

--- a/src/styles.css
+++ b/src/styles.css
@@ -21,3 +21,6 @@ body {
 .mat-slide-toggle-thumb {
   background-color: #C5D2C9;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
